<resources>
    <string name="app_name">TicTacToe</string>
    <string name="usernametext">Please enter playername</string>
    <string name="player_one_name_hint">Player One Name</string>
    <string name="player_two_name_hint">Player Two Name</string>
    <string name="start_game">Start Game</string>
    <string name="winnerMessage">Player %s is the winner!</string>
    <string name="drawMsg">It is a draw !</string>
    <string name="restartButton">Restart</string>
    <string name="Continue_the_game_button">Continue the game</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register_now">Register now!</string>
    <string name="register_here">Register Here!</string>
    <string name="warning">* All fields required!</string>
    <string name="log_in_or_register"><u>Log in Or Register here!</u></string>
    <string name="unlock_more_features">Wanna Unlock more features?</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="changeBg">Customise your background here !</string>

    <string name="title">You can choose the background you like !</string>
    <string name="save">Save</string>
    <string name="log_in_here"><u>Already have an account? Login in Here !</u></string>
    <string name="login_in">Login in</string>
    <string name="register_here_long"><u>Don\'t have an account yet? Register here !</u></string>
    <string name="login_here">Login Here!</string>
    <string name="sign_out">Sign out</string>
    <string-array name="Background_array">
        <item>wallpaper 1</item>
        <item>wallpaper 2</item>
        <item>wallpaper 3</item>
        <item>main background</item>
        <item>game background</item>
        <item>wild</item>
        <item>battlefield1</item>
    </string-array>
</resources>